--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
     "netlify-cli": "^2.68.5",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
+    "reactstrap": "^8.7.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
